Solve overflow issue

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -102,3 +102,8 @@ img {
 .footer__link-item:hover {
   color: #c481f7;
 }
+
+/* Overflow issue */
+html, body {
+  overflow-x: hidden;
+}
